Добавлено главное окно и окно авторизации

--- a/src/main/resources/templates/fragments/fragment-header.html
+++ b/src/main/resources/templates/fragments/fragment-header.html
@@ -4,27 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Quiz</title>
+  <title>JavaKids</title>
   <link rel="shortcut icon" href="">
   <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
   <link rel="stylesheet" th:href="@{/css/common.css}"/>
 </head>
 <body>
 <nav class='navbar navbar-expand-lg sticky-top navbar-dark bg-dark' th:fragment="header">
-  <a class='navbar-brand pr-5' href="#" th:href="@{/}">Quiz</a>
+  <a class='navbar-brand pr-5' href="#" th:href="@{/}">JavaKids</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" th:classappend="${module == 'play' ? 'active' : ''}">
-        <a class="nav-link" href="#" th:href="@{/play}">Play</a>
+        <a class="nav-link" href="#" th:href="@{/play}">Играть</a>
       </li>
       <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item" th:classappend="${module == 'allquestions' ? 'active' : ''}">
-        <a class="nav-link" href="#" th:href="@{/questions}">All Questions</a>
+        <a class="nav-link" href="#" th:href="@{/questions}">Все вопросы</a>
       </li>
       <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item" th:classappend="${module == 'newquestion' ? 'active' : ''}">
-        <a class="nav-link" href="#" th:href="@{/question}">Add question</a>
+        <a class="nav-link" href="#" th:href="@{/question}">Добавить вопрос</a>
       </li>
     </ul>
     <ul class="navbar-nav">
@@ -34,7 +34,7 @@
        </form>
       </li>
       <li sec:authorize="!isAuthenticated()" class="nav-item">
-      <a class="btn btn-primary" href="#" th:href="@{/login}">Login</a>
+      <a class="btn btn-primary" href="#" th:href="@{/login}">Вход</a>
       </li>
     </ul>
   </div>
