--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
+<html lang="ru" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
   <th:block th:insert="~{fragments/fragment-header :: meta}"></th:block>
@@ -12,19 +12,15 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12 border-dark border-bottom">
-      <h2 class="text-center">Choose a category to play quiz</h2>
+      <h2 class="text-center"> Добро пожаловать: </h2>
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-12">
-      <div class="category-option" th:each="category : ${categories}"
-           th:onclick="|window.location.href='@{/play(category=${category.id})}'|">
-        <p class="mb-0" th:text="${category.name}">CATEGORY</p>
-      </div>
-      <div class="category-option newcategory-option" sec:authorize="hasRole('ROLE_ADMIN')"
-           th:onclick="|window.location.href='@{/category}'|">
-        <p class="mb-0">CREATE NEW</p>
-      </div>
+    <div class="col-lg-12" sec:authorize="hasRole('ROLE_ADMIN')">
+      <a href="/lecture/create">Добавить новую лекцию</a><br><br>
+      <a href="/lectures">Список всех лекций</a> <br><br>
+      <a href="/lectures/users">Информация о прохождении лекций пользователями</a> <br><br>
+      <a href="/users">Список всех пользователей</a> <br><br>
     </div>
   </div>
 </div>
