--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,28 +8,28 @@
 <body>
 <div class="container">
   <div class="col-lg-4 offset-lg-4 shadow mt-3 p-4 bg-white">
-    <h2>Login</h2>
+    <h2>Вход</h2>
     <form th:action="@{/perform_login}" method="post">
       <div th:if="${param.error}" class="alert alert-danger">
-          Invalid username and password.
+          Неверный логин или пароль.
       </div>
       <div th:if="${param.logout}" class="alert alert-info">
-          You have been logged out.
+          Вы вышли из системы.
       </div>
       <div class="form-group">
-        <label for="username">User Name:</label>
+        <label for="username">Имя пользователя:</label>
         <input type="text" class="form-control" name="username" id="username" placeholder="Login Id" required>
       </div>
       <div class="form-group">
-        <label for="password">Password:</label>
+        <label for="password">Пароль:</label>
         <input type="password" class="form-control"  name="password" id="password" placeholder="Password" required>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
+        <button class="btn btn-primary" type="submit">Войти</button>
       </div>
     </form>
     <div>
-      <a th:href="@{/user}" class="btn btn-success">Sign Up</a>
+      <a th:href="@{/user}" class="btn btn-success">Зарегистрироваться</a>
     </div>
   </div>
 </div>
