--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,28 +2,47 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-  <th:block th:insert="~{fragments/fragment-header :: meta}"></th:block>
-  <th:block th:insert="~{fragments/fragment-header :: title}"></th:block>
-  <th:block th:insert="~{fragments/fragment-header :: link}"></th:block>
+  <th:block th:insert="~{fragments/common :: meta}"></th:block>
+  <th:block th:insert="~{fragments/common :: title}"></th:block>
+  <th:block th:insert="~{fragments/common :: link}"></th:block>
   <link rel="stylesheet" th:href="@{/css/home.css}">
 </head>
 <body>
-<th:block th:insert="fragments/fragment-header :: header"></th:block>
+<th:block th:insert="fragments/common :: header"></th:block>
 <div class="container">
   <div class="row">
     <div class="col-lg-12 border-dark border-bottom">
-      <h2 class="text-center"> Добро пожаловать: </h2>
+      <h2 class="text-center">Добро пожаловать</h2>
     </div>
   </div>
-  <div class="row">
-    <div class="col-lg-12" sec:authorize="hasRole('ROLE_ADMIN')">
-      <a href="/lecture/create">Добавить новую лекцию</a><br><br>
-      <a href="/lectures">Список всех лекций</a> <br><br>
-      <a href="/lectures/users">Информация о прохождении лекций пользователями</a> <br><br>
-      <a href="/users">Список всех пользователей</a> <br><br>
+  <div class="row" sec:authorize="hasRole('ROLE_ADMIN')">
+    <div class="category-option"
+         th:onclick="|window.location.href='@{/lectures}'|">
+      <p class="mb-0">Список всех лекций</p>
+    </div>
+    <div class="category-option"
+         th:onclick="|window.location.href='@{/lecture/create}'|">
+      <p class="mb-0">Добавить новую лекцию</p>
+    </div>
+    <div class="category-option"
+         th:onclick="|window.location.href='@{/users}'|">
+      <p class="mb-0">Список всех пользователей</p>
+    </div>
+    <div class="category-option"
+         th:onclick="|window.location.href='@{/lectures/users}'|">
+      <p class="mb-0">Прогресс пользователей</p>
+    </div>
+    <div class="category-option"
+         th:onclick="|window.location.href='@{/questions}'|">
+      <p class="mb-0">Все вопросы</p>
+    </div>
+    <div class="category-option"
+         th:onclick="|window.location.href='@{/question}'|">
+      <p class="mb-0">Добавить вопрос</p>
     </div>
   </div>
 </div>
-<th:block th:insert="~{fragments/fragment-header :: body/script}"></th:block>
+<th:block th:insert="~{fragments/common :: body/script}"></th:block>
+<th:block th:insert="fragments/common :: footer"></th:block>
 </body>
 </html>
