--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:insert="~{fragments/fragment-header :: meta}"></th:block>
-  <th:block th:insert="~{fragments/fragment-header :: title}"></th:block>
-  <th:block th:insert="~{fragments/fragment-header :: link}"></th:block>
+  <th:block th:insert="~{fragments/common :: meta}"></th:block>
+  <th:block th:insert="~{fragments/common :: title}"></th:block>
+  <th:block th:insert="~{fragments/common :: link}"></th:block>
 </head>
 <body>
 <div class="container">
@@ -33,6 +33,7 @@
     </div>
   </div>
 </div>
-<th:block th:insert="~{fragments/fragment-header :: body/script}"></th:block>
+<th:block th:insert="~{fragments/common :: body/script}"></th:block>
+<th:block th:insert="fragments/common :: footer"></th:block>
 </body>
 </html>
