Добавлены дополнительные страницы

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -19,5 +19,6 @@
 </div>
 <th:block th:insert="~{fragments/common :: body/script}"></th:block>
 <th:block th:insert="fragments/common :: footer"></th:block>
+<script th:src="@{/js/category.js}"></script>
 </body>
 </html>
