--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -49,5 +49,6 @@
 </div>
 <th:block th:insert="~{fragments/fragment-header :: body/script}"></th:block>
 <th:block th:insert="fragments/common :: footer"></th:block>
+<script th:src="@{/js/category.js}"></script>
 </body>
 </html>
