--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -63,5 +63,6 @@
 </div>
 <th:block th:insert="~{fragments/fragment-header :: body/script}"></th:block>
 <th:block th:insert="fragments/common :: footer"></th:block>
+<script th:src="@{/js/play.js}"></script>
 </body>
 </html>
