--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -42,5 +42,6 @@
 </div>
 <th:block th:insert="~{fragments/fragment-header :: body/script}"></th:block>
 <th:block th:insert="fragments/common :: footer"></th:block>
+<script th:src="@{/js/question_list.js}"></script>
 </body>
 </html>
