--- a/src/main/resources/templates/question_new.html
+++ b/src/main/resources/templates/question_new.html
@@ -64,5 +64,6 @@
 </div>
 <th:block th:insert="~{fragments/fragment-header :: body/script}"></th:block>
 <th:block th:insert="fragments/common :: footer"></th:block>
+<script th:src="@{/js/question_new.js}"></script>
 </body>
 </html>
