--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -51,5 +51,6 @@
 </div>
 <th:block th:insert="~{fragments/common :: body/script}"></th:block>
 <th:block th:insert="fragments/common :: footer"></th:block>
+<script th:src="@{/js/question_new.js}"></script>
 </body>
 </html>
