--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 >
 <head>
-  <th:block th:insert="~{fragments/fragment-header :: meta}"></th:block>
-  <th:block th:insert="~{fragments/fragment-header :: title}"></th:block>
-  <th:block th:insert="~{fragments/fragment-header :: link}"></th:block>
+  <th:block th:insert="~{fragments/common :: meta}"></th:block>
+  <th:block th:insert="~{fragments/common :: title}"></th:block>
+  <th:block th:insert="~{fragments/common :: link}"></th:block>
 </head>
 <body class="bg-white">
-<th:block th:insert="fragments/fragment-header :: header"></th:block>
+<th:block th:insert="fragments/common :: header"></th:block>
 <div class="container">
   <div class="row">
     <div class="col-lg-12 bg-white">
@@ -40,7 +40,7 @@
     </div>
   </div>
 </div>
-<th:block th:insert="~{fragments/fragment-header :: body/script}"></th:block>
+<th:block th:insert="~{fragments/common :: body/script}"></th:block>
 <th:block th:insert="fragments/common :: footer"></th:block>
 <script th:src="@{/js/question_list.js}"></script>
 </body>
