--- a/src/main/resources/templates/lecture/list.html
+++ b/src/main/resources/templates/lecture/list.html
@@ -7,7 +7,7 @@
     <th:block th:insert="~{fragments/common :: link}"></th:block>
 </head>
 <body>
-
+<th:block th:insert="fragments/common :: header"></th:block>
 <style>
     table {
         border-collapse: collapse;
