--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,7 @@
   <th:block th:insert="~{fragments/common :: link}"></th:block>
 </head>
 <body>
+<th:block th:insert="fragments/common :: header"></th:block>
 <div class="container">
   <div class="col-lg-4 offset-lg-4 shadow mt-3 p-4 bg-white">
     <h2>Вход</h2>
