--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,6 +7,7 @@
   <th:block th:insert="~{fragments/common :: link}"></th:block>
 </head>
 <body>
+<th:block th:insert="fragments/common :: header"></th:block>
 <div class="container">
   <div class="row">
     <div class="col-sm-8 offset-sm-2 border-dark shadow bg-white rounded">
