--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -7,7 +7,7 @@
     <th:block th:insert="~{fragments/common :: link}"></th:block>
 </head>
 <body>
-
+<th:block th:insert="fragments/common :: header"></th:block>
 <div class="container mt-3">
     <form action="/registration" method="post">
         <div class="mb-3 mt-3"><label> Имя пользователя: <input type="text" class="form-control" name="username"/> </label></div>
