--- a/src/main/resources/templates/lecture/add.html
+++ b/src/main/resources/templates/lecture/add.html
@@ -7,7 +7,7 @@
     <th:block th:insert="~{fragments/common :: link}"></th:block>
 </head>
 <body>
-
+<th:block th:insert="fragments/common :: header"></th:block>
 <div class="container mt-3">
     <form action="/lecture/create" method="post">
         <div class="mb-3 mt-3">
