Исправлено отображение редактора при создании лекции

--- a/src/main/resources/templates/lecture/add.html
+++ b/src/main/resources/templates/lecture/add.html
@@ -20,7 +20,7 @@
         <div><input type="submit" class="btn btn-secondary" value="Добавить"/></div>
     </form>
 </div>
-
+<th:block th:insert="~{fragments/common :: script}"></th:block>
 <script>
     $('#summernote').summernote({
         height: 300
