--- a/src/main/resources/templates/lecture/add.html
+++ b/src/main/resources/templates/lecture/add.html
@@ -5,6 +5,7 @@
     <th:block th:insert="~{fragments/common :: meta}"></th:block>
     <th:block th:insert="~{fragments/common :: title}"></th:block>
     <th:block th:insert="~{fragments/common :: link}"></th:block>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.css" rel="stylesheet">
 </head>
 <body>
 <th:block th:insert="fragments/common :: header"></th:block>
@@ -16,17 +17,16 @@
         <div class="mb-3">
             <textarea rows="10" class="form-control" id="summernote" name="content"></textarea>
         </div>
-        <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
         <div><input type="submit" class="btn btn-secondary" value="Добавить"/></div>
     </form>
 </div>
 <th:block th:insert="~{fragments/common :: script}"></th:block>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.js"></script>
 <script>
     $('#summernote').summernote({
         height: 300
     });
 </script>
-
 <th:block th:insert="fragments/common :: footer"></th:block>
 </body>
 </html>
