--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -11,39 +11,39 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-8 offset-sm-2 border-dark shadow bg-white rounded">
-      <h2 style="text-align:center;">New User</h2>
+      <h2 style="text-align:center;">Новый пользователь</h2>
       <div class="alert alert-danger alert-dismissible" th:if="${#fields.hasErrors('user.*')}">
         <p style="color:red;" th:each="err : ${#fields.errors('user.*')}" th:text="${err}"></p>
       </div>
       <form action="#" th:action="@{/user}" th:object="${user}" method="post">
         <div class="form-group form-row">
-          <label th:for="name" class="col-sm-2 col-form-label">Name</label>
-          <div class="col-sm-10">
-            <input required type="text" class="form-control input-sm" th:field="*{name}">
-          </div>
-        </div>
-        <div class="form-group form-row">
-          <label th:for="username" class="col-sm-2 col-form-label">User Name</label>
+          <label th:for="username" class="col-sm-2 col-form-label">Имя пользователя</label>
           <div class="col-sm-10">
             <input required type="text" class="form-control input-sm" th:field="*{username}">
           </div>
         </div>
         <div class="form-group form-row">
-          <label th:for="password" class="col-sm-2 col-form-label">Password</label>
+          <label th:for="name" class="col-sm-2 col-form-label">E-mail</label>
+          <div class="col-sm-10">
+            <input required type="text" class="form-control input-sm" th:field="*{email}">
+          </div>
+        </div>
+        <div class="form-group form-row">
+          <label th:for="password" class="col-sm-2 col-form-label">Пароль</label>
           <div class="col-sm-10">
             <input required type="password" class="form-control input-sm" th:field="*{password}">
           </div>
         </div>
         <div class="form-group form-row">
-          <label th:for="confirmpassword" class="col-sm-2 col-form-label">Confirm Password</label>
+          <label th:for="confirmpassword" class="col-sm-2 col-form-label">Подтвердить пароль</label>
           <div class="col-sm-10">
             <input required type="password" class="form-control input-sm" th:field="*{confirmpassword}">
           </div>
         </div>
         <div class="form-group form-row">
           <div class="col-sm-10 offset-sm-2">
-            <input class="btn btn-primary" type="submit" value="Sign Up">
-            <a class="ml-4" th:href="@{/}">Cancel</a>
+            <input class="btn btn-primary" type="submit" value="Зарегистрировать">
+            <a class="ml-4" th:href="@{/}">Отмена</a>
           </div>
         </div>
       </form>
