--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -41,7 +41,8 @@
 </div>
 <footer class="footer">
   <div class="mt-4 p-5 bg-secondary text-white rounded">
-
+    <h1>JavaKids - обучение детей программированию на JAVA</h1>
+    <p>Мы рады видеть Вас на нашей платформе для обучения</p>
   </div>
 </footer>
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
