--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -23,7 +23,7 @@
     </ul>
     <ul class="navbar-nav mr-auto" sec:authorize="isAuthenticated()">
       <li class="nav-item">
-        <a class="nav-link" href="#" th:href="@{/user/id}">Профиль</a>
+        <a class="nav-link" href="#" th:href="@{/user/detail}">Профиль</a>
       </li>
     </ul>
     <ul class="navbar-nav">
