--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -15,7 +15,7 @@
       <div class="alert alert-danger alert-dismissible" th:if="${#fields.hasErrors('user.*')}">
         <p style="color:red;" th:each="err : ${#fields.errors('user.*')}" th:text="${err}"></p>
       </div>
-      <form action="#" th:action="@{/user}" th:object="${user}" method="post">
+      <form action="#" th:action="@{/user/add}" th:object="${user}" method="post">
         <div class="form-group form-row">
           <label th:for="username" class="col-sm-2 col-form-label">Имя пользователя</label>
           <div class="col-sm-10">
