--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -30,7 +30,7 @@
       </div>
     </form>
     <div>
-      <a th:href="@{/user}" class="btn btn-success">Зарегистрироваться</a>
+      <a th:href="@{/user/add}" class="btn btn-success">Зарегистрироваться</a>
     </div>
   </div>
 </div>
