--- a/src/main/resources/templates/lecture/detail.html
+++ b/src/main/resources/templates/lecture/detail.html
@@ -9,16 +9,14 @@
 <body>
 <th:block th:insert="fragments/common :: header"></th:block>
 <div class="container mt-3">
-    <form th:action="@{'/lecture/' + ${userLecture.lecture.id}}" method="post">
-        <div class="mb-3" th:utext="'Статус лекции: ' + ${userLecture.status}">
-        </div>
+    <form th:action="@{'/lecture/' + ${lecture.id}}" method="post">
         <div class="mb-3 mt-3">
-            <h1 th:utext="${userLecture.lecture.topic}">topic</h1>
+            <h1 th:utext="${lecture.topic}">topic</h1>
         </div>
         <hr />
-        <div class="mb-3" th:utext="${userLecture.lecture.content}">content</h1>>
+        <div class="mb-3" th:utext="${lecture.content}">content</h1>>
         </div>
-        <div><input type="submit" class="btn btn-secondary" value="Завершить"/></div>
+        <div sec:authorize="isAuthenticated() and !hasRole('ROLE_ADMIN')"><input type="submit" class="btn btn-secondary" value="Завершить"/></div>
     </form>
 <br><br>
     <a th:href="@{/lectures}" sec:authorize="hasRole('ROLE_ADMIN')">Назад</a> <br>
