Добавлено удаление лекции под администратором

--- a/src/main/resources/templates/lecture/delete.html
+++ b/src/main/resources/templates/lecture/delete.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:insert="~{fragments/common :: meta}"></th:block>
     <th:block th:insert="~{fragments/common :: title}"></th:block>
@@ -9,16 +8,13 @@
 <body>
 <th:block th:insert="fragments/common :: header"></th:block>
 <div class="container mt-3">
-    <form action="/lecture/{{lecture.id}}/delete" method="post">
-        <input type="hidden" id="id" value="{{lecture.id}}">
-        <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+    <form  th:action="@{'/lecture/' + ${lecture.id} + '/delete'}" th:method="post">
         <div class="mb-3 mt-3">
-            Лекция ID {{lecture.id}} , тема: {{lecture.topic}} удалена <br><br><br><br><br>
+            Лекция ID <a th:utext=${lecture.id}></a>, тема:  <a th:utext=${lecture.topic}></a> будет удалена<br>
         </div>
+        <div><input type="submit" class="btn btn-secondary" value="Подтвердить"/></div>
     </form>
-
     <a href="/lectures">Назад</a> <br>
-
 </div>
 
 <th:block th:insert="fragments/common :: footer"></th:block>
