Исправлено отображение пройденных пользователем лекций у администратора в личном кабинете

--- a/src/main/resources/templates/user/lectures.html
+++ b/src/main/resources/templates/user/lectures.html
@@ -9,23 +9,25 @@
 <body>
 <th:block th:insert="fragments/common :: header"></th:block>
 <div class="container mt-3">
-    <h3>Мои лекции:</h3>
+    <h3 sec:authorize="isAuthenticated() and !hasRole('ROLE_ADMIN')">Мои лекции:</h3>
+    <h3 sec:authorize="hasRole('ROLE_ADMIN')">Информация по пользователю: <a th:utext="${user.username}"></a></h3>
     <table>
         <tr>
             <th>Id</th>
             <th>Название</th>
             <th>Статус</th>
-            <th>URL</th>
+            <th sec:authorize="isAuthenticated() and !hasRole('ROLE_ADMIN')">URL</th>
         </tr>
         <tr th:each="userLecture : ${userLectureList}">
             <td th:utext="${userLecture.lecture.id}">id</td>
             <td th:utext="${userLecture.lecture.topic}">name</td>
             <td th:utext="${userLecture.status}">status</td>
             <td>
-                <a th:href="@{'/lecture/' + ${userLecture.lecture.id}}">Перейти к лекции</a>
+                <a th:href="@{'/lecture/' + ${userLecture.lecture.id}}" sec:authorize="isAuthenticated() and !hasRole('ROLE_ADMIN')">Перейти к лекции</a>
             </td>
         </tr>
     </table>
+    <a th:href="@{'/users'}" sec:authorize="hasRole('ROLE_ADMIN')">Назад</a>
 </div>
 
 <th:block th:insert="fragments/common :: footer"></th:block>
