--- a/src/main/resources/templates/quiz/play.html
+++ b/src/main/resources/templates/quiz/play.html
@@ -62,7 +62,8 @@
   </form>
 </div>
 
-<th:block th:insert="fragments/common :: footer"></th:block>
+<th:block th:insert="~{fragments/common :: script}"></th:block>
 <script th:src="@{/js/play.js}"></script>
+<th:block th:insert="fragments/common :: footer"></th:block>
 </body>
 </html>
