--- a/src/main/resources/templates/quiz/question_new.html
+++ b/src/main/resources/templates/quiz/question_new.html
@@ -63,7 +63,8 @@
   </div>
 </div>
 
-<th:block th:insert="fragments/common :: footer"></th:block>
+<th:block th:insert="~{fragments/common :: script}"></th:block>
 <script th:src="@{/js/question_new.js}"></script>
+<th:block th:insert="fragments/common :: footer"></th:block>
 </body>
 </html>
