--- a/src/main/resources/templates/quiz/play.html
+++ b/src/main/resources/templates/quiz/play.html
@@ -55,10 +55,9 @@
     <div class="row" th:if="${#lists.isEmpty(answerDto.answers)}">
       <div class="col-lg-12 text-center">
         <h1 class="bg-danger p-3">No questions available!</h1>
-        <a class="btn btn-primary m-3" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/category}">Create new Category?</a>
       </div>
     </div>
-    <input type="hidden" hidden th:field="${answerDto.categoryId}">
+    <input type="hidden" hidden th:field="${answerDto.lectureId}">
   </form>
 </div>
 
