--- a/src/main/resources/templates/quiz/question_list_table.html
+++ b/src/main/resources/templates/quiz/question_list_table.html
@@ -15,7 +15,7 @@
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true" style="font-size:20px">×</span>
         </button>
-        <p>Question deleted successfully</p>
+        <p>Вопрос успешно удален</p>
       </div>
       <table class="table table-striped table-bordered" style="table-layout:fixed;">
         <caption class="ml-2">List of questions- <span class="text-success ml-2">&#10003; indicates correct option</span>
@@ -23,7 +23,7 @@
         <thead class="thead-dark">
         <tr>
           <th style="width: 23%">Question</th>
-          <th style="width: 10%">Category</th>
+          <th style="width: 10%">Lecture</th>
           <th style="width: 15%">Option 1</th>
           <th style="width: 15%">Option 2</th>
           <th style="width: 15%">Option 3</th>
@@ -37,7 +37,7 @@
         </tr>
         <tr th:each="question : ${questions}">
           <td class="text-truncate" th:title="${question.text}"><span th:text="${question.text}"> Text </span></td>
-          <td class="text-truncate" th:title="${question.category.name}"><span th:text="${question.category.name}"> Category </span>
+          <td class="text-truncate" th:title="${question.lecture.name}"><span th:text="${question.lecture.name}"> Lecture </span>
           </td>
           <td th:each="option : ${question.options}" class="text-truncate" th:title="${option.value.text}">
             <span th:text="${option.value.text}"> Option </span>
